📚 add: new details ui

--- a/app/src/main/res/values-night/colors.xml
+++ b/app/src/main/res/values-night/colors.xml
@@ -1,4 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="windowBackground">#111318</color>
+    <color name="windowBackground">#1C1D1E</color>
 </resources>
