--- a/app/src/main/res/drawable/ic_launcher_background.xml
+++ b/app/src/main/res/drawable/ic_launcher_background.xml
@@ -4,83 +4,77 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <group
-        android:scaleX="0.67"
-        android:scaleY="0.67"
-        android:translateX="17.82"
-        android:translateY="17.82">
-        <path android:pathData="m107.98,0.021h-108v108h108v-108z">
-            <aapt:attr name="android:fillColor">
-                <gradient
-                    android:endX="44.984"
-                    android:endY="81.021"
-                    android:startX="71.984"
-                    android:startY="18.025"
-                    android:type="linear">
-                    <item
-                        android:color="#FF424D58"
-                        android:offset="0" />
-                    <item
-                        android:color="#FF272A2F"
-                        android:offset="1" />
-                </gradient>
-            </aapt:attr>
-        </path>
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#676D73"
-            android:pathData="m86.864,107.85c-4.957,-5.716 0.57,-9.808 6.602,-8.838v-2.384c-11.264,1.477 -9.028,-11.538 -0.78,-9.45 3.944,0.717 1.371,1.814 1.835,5.041 0.738,2.721 5.463,2.7 5.59,-0.675 0.696,-7.425 -11.117,-7.488 -15.631,-5.231 -6.518,3.206 -4.24,10.399 2.573,11.201v0.253c-6.223,0.084 -9.302,6.35 -5.948,10.294h6.012c-0.063,-0.105 -0.169,-0.147 -0.253,-0.211z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#7E8386"
-            android:pathData="m100.03,103.49c-1.097,2.004 -2.321,3.459 -3.671,4.345 -0.105,0.064 -0.211,0.127 -0.338,0.19h3.523c0.928,-1.034 1.688,-2.194 2.279,-3.438l-1.793,-1.097z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#676D73"
-            android:pathData="m62.269,104.14c-2.658,-2.257 -8.627,-4.936 -10.652,-6.687 -6.202,-5.674 3.016,-10.8 8.353,-7.383 -2.7,7.594 5.084,7.13 5.084,3.291 0.675,-7.172 -11.96,-7.214 -16.221,-5.105 -4.261,1.688 -5.716,6.37 -2.89,9.682 1.645,1.941 4.134,2.595 7.214,4.198 -3.649,0.548 -7.299,2.468 -9.26,5.822h4.704c3.649,-6.518 8.712,-5.316 11.855,0h5.147c-0.717,-1.329 -2.025,-2.763 -3.333,-3.818z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#6A6F75"
-            android:pathData="m14.576,37.716c-2.573,3.08 1.16,7.109 4.092,4.62 2.911,-3.059 -1.097,-7.509 -4.092,-4.62z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#6A6F75"
-            android:pathData="m8.859,43.685h1.519c0.738,-4.324 1.835,-7.193 2.616,-10.758h-6.75l2.616,10.758z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#6A6F75"
-            android:pathData="m-0.021,38.559c0.105,1.561 -0.338,2.953 0.464,3.607 3.354,3.037 6.898,-1.941 4.05,-4.662 -1.582,-1.519 -4.261,-0.401 -4.514,1.055z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#6A6F75"
-            android:pathData="m0.084,52.671c1.519,2.995 -0.485,15.314 1.097,17.888 1.666,4.008 6.497,5.463 10.842,4.662 11.665,-2.215 12.024,-26.325 5.041,-26.283 -3.923,-0.084 -3.691,3.923 -1.498,5.843 2.152,1.666 3.354,3.776 3.312,6.476 0.253,13.606 -12.825,13.964 -13.352,6.37 -0.591,-11.834 2.299,-19.364 -5.569,-18.541v3.438c0.063,0.063 0.105,0.105 0.127,0.148z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#6C7278"
-            android:pathData="m19.237,1.371c0.802,4.008 6.497,2.806 5.632,-1.35h-5.548c-0.063,0.443 -0.084,0.907 -0.084,1.35z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#6C7278"
-            android:pathData="m7.383,2.974c0.738,2.531 3.628,3.776 6.138,4.177v0.253c-6.033,0.19 -9.26,5.632 -6.054,10.336 5.674,6.307 17.402,4.556 20.756,-3.501l-1.793,-1.097c-2.595,5.484 -8.585,7.235 -13.142,4.387 -2.257,-1.582 -2.51,-5.97 -0.105,-7.762 1.877,-1.434 4.577,-0.991 6.729,-1.076v-2.405c-5.421,0.253 -8.184,-0.78 -7.446,-6.244h-5.189c-0.232,0.802 -0.19,1.919 0.105,2.932z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#6E747A"
-            android:pathData="m48.094,0.021h-4.767v16.896h4.767v-16.896z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#6E747A"
-            android:pathData="m63.935,0.021h-4.831v22.233h4.831v-22.233z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#70777D"
-            android:pathData="m81.865,16.538c0,1.772 0.422,3.143 1.245,4.113 0.823,0.97 2.046,1.434 3.607,1.434 0.992,0.021 1.983,-0.063 2.953,-0.274 0.759,-0.19 1.54,-0.422 2.362,-0.696v-1.645l-0.844,0.063c-0.295,0.021 -0.57,0.021 -0.823,0.021 -1.118,0 -2.025,-0.295 -2.679,-0.865 -0.654,-0.57 -0.991,-1.413 -0.991,-2.51v-16.158h-5.126c0.232,0.464 0.359,0.991 0.338,1.519l-0.042,14.998z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#6C7278"
-            android:pathData="m105.81,35.184c-5.273,-3.755 -13.774,-1.962 -16.516,4.324 -1.561,4.683 -0.759,7.109 -0.949,10.336v27.928h4.472v-8.163c5.801,3.333 12.298,1.202 15.019,-3.143v-14.154c-1.455,-1.751 -3.818,-2.974 -6.18,-3.206l-0.106,-0.211c2.574,-0.232 5.59,-2.426 6.286,-4.345v-3.459c0.063,-3.734 0.211,-4.071 -2.025,-5.906zM103.701,44.507c-1.35,3.164 -4.409,3.734 -7.235,3.565v2.32c2.362,-0.042 5.189,-0.169 6.793,1.73 2.868,3.544 1.94,11.18 0.316,14.048 -3.206,5.864 -10.019,2.89 -10.737,-0.675 0.042,-3.164 -0.084,-21.98 0.084,-22.591 0.548,-12.171 14.28,-9.155 10.779,1.603z" />
-        <path
-            android:fillAlpha="0.25"
-            android:fillColor="#676D73"
-            android:pathData="m26.599,96.609c6.813,-12.087 -2.067,-11.602 -3.143,-8.48 -0.422,1.034 -0.169,1.877 0,3.08 2.025,5.948 -2.616,10.8 -4.535,16.39 -1.034,-6.644 -5.147,-14.47 -7.573,-20.587l-0.359,-0.359 -7.636,0.549v1.688c4.24,0.021 4.472,2.953 5.864,5.864 2.173,4.999 3.586,7.995 5.527,13.268h5.949c1.582,-3.649 4.282,-8.079 5.906,-11.412z" />
-    </group>
+    <path android:pathData="M90.4 18H18v72.3h72.3V18Z">
+        <aapt:attr name="android:fillColor">
+            <gradient
+                android:endX="48.17"
+                android:endY="72.25"
+                android:startX="66.25"
+                android:startY="30.06"
+                android:type="linear">
+                <item
+                    android:color="#FF424D58"
+                    android:offset="0" />
+                <item
+                    android:color="#FF272A2F"
+                    android:offset="1" />
+            </gradient>
+        </aapt:attr>
+    </path>
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF676D73"
+        android:pathData="M76.2 90.2c-3.3-3.8 0.4-6.6 4.4-5.9v-1.6c-7.6 1-6.1-7.7-0.5-6.3 2.6 0.5 0.9 1.2 1.2 3.4 0.5 1.8 3.7 1.8 3.7-0.5 0.5-5-7.5-5-10.5-3.5-4.4 2.1-2.8 7 1.7 7.5v0.2c-4.2 0.1-6.2 4.3-4 6.9h4c-0.1-0.1-0.1-0.1-0.2-0.1Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF7E8386"
+        android:pathData="M85 87.3c-0.7 1.3-1.6 2.3-2.5 2.9l-0.2 0.1h2.4c0.6-0.7 1.1-1.5 1.5-2.3l-1.2-0.7Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF676D73"
+        android:pathData="M59.7 87.7c-1.8-1.5-5.8-3.3-7.1-4.5-4.2-3.8 2-7.2 5.6-4.9-1.8 5.1 3.4 4.8 3.4 2.2 0.5-4.8-8-4.8-10.9-3.4-2.9 1.1-3.8 4.3-1.9 6.5 1.1 1.3 2.8 1.7 4.8 2.8-2.5 0.4-4.9 1.7-6.2 3.9h3.2c2.4-4.4 5.8-3.6 7.9 0h3.4c-0.5-0.9-1.4-1.9-2.2-2.6Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF6A6F75"
+        android:pathData="M27.8 43.3c-1.7 2.1 0.8 4.8 2.7 3.1 2-2.1-0.7-5-2.7-3.1Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF6A6F75"
+        android:pathData="M24 47.2h1c0.5-2.9 1.2-4.8 1.8-7.2h-4.5l1.8 7.2Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF6A6F75"
+        android:pathData="M18 43.8c0.1 1.1-0.2 2 0.3 2.4 2.3 2 4.6-1.3 2.7-3.1-1.1-1-2.9-0.3-3 0.7Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF6A6F75"
+        android:pathData="M18.1 53.3c1 2-0.3 10.3 0.7 12 1.1 2.7 4.4 3.7 7.3 3.1 7.8-1.5 8.1-17.6 3.4-17.6-2.6-0.1-2.5 2.6-1 3.9 1.4 1.1 2.3 2.5 2.2 4.3 0.2 9.1-8.6 9.4-9 4.3-0.4-7.9 1.5-13-3.7-12.4v2.3c0.1 0.1 0.1 0.1 0.1 0.1Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF6C7278"
+        android:pathData="M30.9 18.9c0.5 2.7 4.4 1.9 3.8-0.9h-3.7c-0.1 0.3-0.1 0.6-0.1 0.9Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF6C7278"
+        android:pathData="M23 20c0.5 1.7 2.4 2.5 4.1 2.8v0.2c-4 0.1-6.2 3.8-4.1 6.9 3.8 4.2 11.7 3.1 13.9-2.4l-1.2-0.7c-1.7 3.7-5.8 4.8-8.8 2.9-1.5-1.1-1.7-4-0.1-5.2 1.3-1 3.1-0.7 4.5-0.7V22.2c-3.6 0.2-5.5-0.5-5-4.2h-3.5c-0.2 0.5-0.1 1.3 0.1 2Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF6E747A"
+        android:pathData="M50.3 18h-3.2v11.3h3.2V18Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF6E747A"
+        android:pathData="M60.9 18h-3.2v14.9h3.2V18Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF70777D"
+        android:pathData="M72.9 29.1c0 1.2 0.3 2.1 0.8 2.8 0.6 0.7 1.4 1 2.4 1 0.7 0 1.3-0.1 2-0.2 0.5-0.1 1-0.3 1.6-0.5v-1.1l-0.6 0-0.6 0c-0.8 0-1.4-0.2-1.8-0.6-0.4-0.4-0.7-0.9-0.7-1.7V18h-3.4c0.2 0.3 0.2 0.7 0.2 1l0 10Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF6C7278"
+        android:pathData="M88.9 41.55c-3.53-2.51-9.22-1.31-11.06 2.9-1.04 3.13-0.5 4.76-0.63 6.92v18.7h3v-5.46c3.88 2.23 8.23 0.8 10.05-2.1v-9.49c-0.97-1.17-2.56-1.99-4.14-2.15l-0.07-0.14c1.72-0.15 3.74-1.62 4.21-2.9V45.5c0.04-2.5 0.14-2.73-1.36-3.96Zm-1.4 6.24c-0.91 2.12-2.96 2.5-4.85 2.4v1.55c1.58-0.03 3.47-0.12 4.54 1.15 1.93 2.38 1.3 7.5 0.22 9.41-2.15 3.93-6.71 1.94-7.2-0.45 0.03-2.12-0.05-14.72 0.06-15.13 0.37-8.15 9.57-6.13 7.22 1.07Z" />
+    <path
+        android:fillAlpha="0.25"
+        android:fillColor="#FF676D73"
+        android:pathData="M35.9 82.7c4.6-8.1-1.4-7.8-2.1-5.7-0.3 0.7-0.1 1.3 0 2.1 1.4 4-1.8 7.2-3 11-0.7-4.5-3.5-9.7-5.1-13.8l-0.2-0.2-5.1 0.4v1.1c2.8 0 3 2 3.9 3.9 1.5 3.3 2.4 5.4 3.7 8.9h4c1.1-2.4 2.9-5.4 4-7.6Z" />
 </vector>
