--- a/app/src/main/res/drawable/ic_launcher_foreground.xml
+++ b/app/src/main/res/drawable/ic_launcher_foreground.xml
@@ -3,13 +3,7 @@
     android:height="108dp"
     android:viewportWidth="108"
     android:viewportHeight="108">
-    <group
-        android:scaleX="0.67"
-        android:scaleY="0.67"
-        android:translateX="17.82"
-        android:translateY="17.82">
-        <path
-            android:fillColor="#fff"
-            android:pathData="m81.691,71.726c-1.051,0 -2.257,0 -3.525,-0.031 -6.277,0.557 -6.864,-12.412 -7.05,-16.868 1.484,-8.388 3.37,-18.137 4.05,-25.256h-10.358l-0.897,6.778c-12.46,-16.59 -34.042,-6.995 -36.732,12.783 -3.679,26.897 23.22,39.587 36.206,20.242 1.948,11.823 11.409,9.254 19.139,6.778v-4.457h-0.835v0.031zM62.119,52.072c-0.526,27.763 -20.685,22.718 -23.004,8.883 -5.658,-30.951 20.685,-36.801 23.004,-8.883z" />
-    </group>
+    <path
+        android:fillColor="#FFFFFFFF"
+        android:pathData="M72.75 66.02c-0.7 0-1.51 0-2.36-0.02-4.2 0.38-4.6-8.3-4.72-11.3 1-5.61 2.26-12.14 2.71-16.9h-6.94l-0.6 4.53c-8.34-11.11-22.8-4.68-24.6 8.56-2.46 18.02 15.55 26.51 24.25 13.56 1.3 7.92 7.64 6.2 12.82 4.54V66h-0.56v0.02Zm-13.1-13.16c-0.36 18.6-13.86 15.22-15.42 5.95-3.79-20.73 13.86-24.65 15.41-5.95Z" />
 </vector>
